[package]
name	= "nt-cyclonedds-sys"
version = "0.1.0"
edition = "2021"

[features]
default	= [
#   "idlc",
#   "ddsperf",
#   "build_idlc_xtests",
  
   "ssl",
   "shm",
   "security",
   "lifespan",
   "deadline_missed",
   "typelib",
   "type_discovery",
   "topic_discovery",
   "source_specific_multicast",
   "ipv6"
]

# -DBUILD_EXAMPLES=ON: to build the included examples

# -DBUILD_TESTING=ON: to build the test suite (forces exporting all
# symbols from the library)

# -DBUILD_IDLC=NO: to disable building the IDL compiler (affects
# building examples, tests and ddsperf)
idlc = []

# -DBUILD_DDSPERF=NO: to disable building the ddsperf tool for
# performance measurement
ddsperf = []

# -DENABLE_SSL=NO: to not look for OpenSSL, remove TLS/TCP support and
# avoid building the plugins that implement authentication and
# encryption (default is AUTO to enable them if OpenSSL is found)
ssl = []

# -DENABLE_SHM=NO: to not look for Iceoryx and disabled shared memory
# support (default is AUTO to enable it if Iceoryx is found)
shm = []

# -DENABLE_SECURITY=NO: to not build the security interfaces and hooks
# in the core code, nor the plugins (one can enable security without
# OpenSSL present, you'll just have to find plugins elsewhere in that
# case)
security = []

# -DENABLE_LIFESPAN=NO: to exclude support for finite lifespans QoS
lifespan = []

# -DENABLE_DEADLINE_MISSED=NO: to exclude support for finite deadline
# QoS settings
deadline_missed = []

# -DENABLE_TYPELIB=NO: to exclude support for type library, requires
# also disabling type and topic discovery using
# -DENABLE_TYPE_DISCOVERY=NO and -DENABLE_TOPIC_DISCOVERY=NO
typelib = []


# -DENABLE_TYPE_DISCOVERY=NO: to exclude support for type discovery
# and checking type compatibility (effectively most of XTypes),
# requires also disabling topic discovery using
# -DENABLE_TOPIC_DISCOVERY=NO
type_discovery = []

# -DENABLE_TOPIC_DISCOVERY=NO: to exclude support for topic discovery
topic_discovery = []

# -DENABLE_SOURCE_SPECIFIC_MULTICAST=NO: to disable support for
# source-specific multicast (disabling this and -DENABLE_IPV6=NO may
# be needed for QNX builds)
source_specific_multicast = []

# -DENABLE_IPV6=NO: to disable ipv6 support (disabling this and
# -DENABLE_SOURCE_SPECIFIC_MULTICAST=NO may be needed for QNX builds)
ipv6 = []

# -DBUILD_IDLC_XTESTS=NO: Include a set of tests for the IDL compiler
# that use the C back-end to compile an idl file at (test) runtime,
# and use the C compiler to build a test application for the
# generated types, that is executed to do the actual testing (not
# supported on Windows)
build_idlc_xtests = []

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
